--- a/src/components/TaxForm.css
+++ b/src/components/TaxForm.css
@@ -2,7 +2,10 @@
     display: flex;
     flex-direction: column;
 
-    .year-input, .currency-input {
+    gap: 24px;
+
+    .year-input,
+    .currency-input {
         width: 100%;
     }
 }
